--- a/Views/Dashboard/Chart.cshtml
+++ b/Views/Dashboard/Chart.cshtml
@@ -3,54 +3,60 @@
     Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 }
 
-
-    <div id="layoutSidenav_content">
-        <main>
-            <div class="container-fluid px-4">
-                <h1 class="mt-4">Charts</h1>
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item">
+<div id="layoutSidenav_content">
+    <main>
+        <div class="container-fluid px-4">
+            <h1 class="mt-4">Charts</h1>
+            <ol class="breadcrumb mb-4">
+                <li class="breadcrumb-item">
                     <a class="navbar-brand ps-3" asp-controller="Dashboard" asp-action="Dashboard">Prodilitics</a>
-                    </li>
-                    <li class="breadcrumb-item active">Charts</li>
-                </ol>
+                </li>
+                <li class="breadcrumb-item active">Charts</li>
+            </ol>
 
-                <div class="card mb-4">
-                    <div class="card-body">
-                        Chart.js is a third party plugin that is used to generate the charts in this template.
-                        <a target="_blank" href="https://www.chartjs.org/docs/latest/">Chart.js documentation</a>.
-                    </div>
+            <div class="card mb-4">
+                <div class="card-body">
+                    Full Chart Example with Chart.js
                 </div>
+            </div>
 
-                <div class="card mb-4">
-                    <div class="card-header">
-                        <i class="fas fa-chart-area me-1"></i>
-                        Area Chart Example
-                    </div>
-                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="30"></canvas></div>
-                    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+            <!-- Area Chart -->
+            <div class="card mb-4">
+                <div class="card-header">
+                    <i class="fas fa-chart-area me-1"></i>
+                    Area Chart
                 </div>
+                <div class="card-body"><canvas id="myAreaChart" width="100%" height="30"></canvas></div>
+                <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+            </div>
 
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                <i class="fas fa-chart-bar me-1"></i>
-                                Bar Chart Example
-                            </div>
-                            <div class="card-body"><canvas id="myBarChart" width="100%" height="50"></canvas></div>
-                            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+            <div class="row">
+                <!-- Bar Chart -->
+                <div class="col-lg-6">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <i class="fas fa-chart-bar me-1"></i>
+                            Bar Chart
                         </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                <i class="fas fa-chart-pie me-1"></i>
-                                Pie Chart Example
-                            </div>
-                            <div class="card-body"><canvas id="myPieChart" width="100%" height="50"></canvas></div>
-                            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                        </div>
+                        <div class="card-body"><canvas id="myBarChart" width="100%" height="50"></canvas></div>
+                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
                     </div>
                 </div>
+
+                <!-- Pie Chart -->
+                <div class="col-lg-6">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <i class="fas fa-chart-pie me-1"></i>
+                            Pie Chart
+                        </div>
+                        <div class="card-body"><canvas id="myPieChart" width="100%" height="50"></canvas></div>
+                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+</div>
+
 
