--- a/Views/Dashboard/Employee.cshtml
+++ b/Views/Dashboard/Employee.cshtml
@@ -1,32 +1,15 @@
 ﻿@model IEnumerable<Productivity_Analytics.Models.Employee>
 @{
-    Layout = "_DashboardLayout";
+    ViewData["Title"] = "Employee";
+    Layout = "~/Views/Shared/_EmployeeLayout.cshtml";
 }
 
-<h1 class="mt-4">Dashboard</h1>
-<ol class="breadcrumb mb-4">
-    <li class="breadcrumb-item active">Productivity Analytics</li>
-</ol>
-<div class="row">
-    <div class="col-xl-6">
-        <div class="card mb-4">
-            <div class="card-header">
-                <i class="fas fa-chart-area me-1"></i>
-                Employee Area Chart 
-            </div>
-            <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
-        </div>
-    </div>
-    <div class="col-xl-6">
-        <div class="card mb-4">
-            <div class="card-header">
-                <i class="fas fa-chart-bar me-1"></i>
-                Project Bar Chart 
-            </div>
-            <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
-        </div>
-    </div>
-</div>
+<h1 class="mt-4">Employee</h1>
+    <ol class="breadcrumb mb-4">
+        <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Dashboard">Dashboard</a></li>
+        <li class="breadcrumb-item active">Employee</li>
+    </ol>
+
 
 <div class="card mb-4">
     <div class="card-header">
