--- a/Views/Shared/_layout-sidenav-light.cshtml
+++ b/Views/Shared/_layout-sidenav-light.cshtml
@@ -1,4 +1,4 @@
-﻿@RenderBody()
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,63 +44,64 @@
     </nav>
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
-            <nav class="sb-sidenav accordion sb-sidenav-light" id="sidenavAccordion">
+            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Core</div>
-                        <a class="nav-link" asp-controller="Dashboard" asp-action="Index">
+                        <a class="nav-link" asp-controller="Dashboard" asp-action="Dashboard">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
+
                         <div class="sb-sidenav-menu-heading">Interface</div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                            Layouts
+                            Projects
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
-                        <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                        <div class="collapse" id="collapseLayouts" data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" asp-controller="Dashboard" asp-action="Static">Static Navigation</a>
-                                <a class="nav-link" asp-controller="Dashboard" asp-action="sidenav">Light Sidenav</a>
+                                <a class="nav-link" asp-controller="Dashboard" asp-action="Project">Ongoing Progress</a>
+                                <a class="nav-link" asp-controller="Dashboard" asp-action="Archived">Archived Progress</a>
                             </nav>
                         </div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages">
                             <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                            Pages
+                            Details
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
-                        <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
+                        <div class="collapse" id="collapsePages" data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
-                                    Authentication
+                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth">
+                                    Information
                                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
-                                <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
+                                <div class="collapse" id="pagesCollapseAuth" data-bs-parent="#sidenavAccordionPages">
                                     <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
-                                        <a class="nav-link" asp-controller="Account" asp-action="Register">Register</a>
-                                        <a class="nav-link" asp-controller="Account" asp-action="ForgotPassword">Forgot Password</a>
+                                        <a class="nav-link" asp-controller="Dashboard" asp-action="Employee">Employee</a>
+                                        <a class="nav-link" asp-controller="Dashboard" asp-action="Department">Departments</a>
                                     </nav>
                                 </div>
-                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
-                                    Error
+
+                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError">
+                                    No additional info
                                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
-                                <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
+                                <div class="collapse" id="pagesCollapseError" data-bs-parent="#sidenavAccordionPages">
                                     <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" asp-controller="Error" asp-action="Unauthorized">401 Page</a>
-                                        <a class="nav-link" asp-controller="Error" asp-action="NotFound">404 Page</a>
-                                        <a class="nav-link" asp-controller="Error" asp-action="ServerError">500 Page</a>
+
                                     </nav>
                                 </div>
                             </nav>
                         </div>
+
                         <div class="sb-sidenav-menu-heading">Addons</div>
                         <a class="nav-link" asp-controller="Dashboard" asp-action="Chart">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Charts
                         </a>
-                        <a class="nav-link" asp-controller="Dashboard" asp-action="tables">
+                        <a class="nav-link" asp-controller="Dashboard" asp-action="Tables">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Tables
                         </a>
@@ -108,17 +109,17 @@
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    Start Bootstrap
+                    @(User.Identity?.IsAuthenticated == true ? User.Identity.Name : "Guest")
                 </div>
             </nav>
         </div>
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid px-4">
-                    <h1 class="mt-4">Sidenav Light</h1>
+                    <h1 class="mt-4">Archived Projects</h1>
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
-                        <li class="breadcrumb-item active">Sidenav Light</li>
+                        <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Dashboard">Dashboard</a></li>
+                        <li class="breadcrumb-item active">Archieved</li>
                     </ol>
                     <div class="card mb-4">
                         <div class="card-body">
