--- a/Views/Dashboard/Tables.cshtml
+++ b/Views/Dashboard/Tables.cshtml
@@ -41,7 +41,8 @@
                             <td>@emp.YearsOfExperience</td>
                             <td>@emp.EducationLevel</td>
                             <td>@(emp.Department?.DepartmentName ?? "No Department")</td>
-                            <td>@(emp.Rating ?? "No Rating")</td>
+                            <td>@(emp.Rating.HasValue? emp.Rating.Value.ToString("0.0") : "No Rating")</td>
+
                         </tr>
 
                     }
