--- a/Views/Shared/_layout-sidenav-light.cshtml
+++ b/Views/Shared/_layout-sidenav-light.cshtml
@@ -123,7 +123,7 @@
                     </ol>
                     <div class="card mb-4">
                         <div class="card-body">
-                            <p>Test</p>
+                            @RenderBody()
                         </div>
                     </div>
                 </div>
